src/objects/FSTR__PCE_Custom_Report__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <fields>
        <fullName>FSTR__Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PCE_Custom_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__isAutoSaved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the report was auto-saved (as a &apos;last report&apos;)</description>
        <label>isAutoSaved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__isGlobalSetting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGlobalSetting</label>
        <type>Checkbox</type>
    </fields>
    <label>Custom Report</label>
    <nameField>
        <displayFormat>R{000000}</displayFormat>
        <label>Custom Reports Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>